Added duplicate Match detection on create

--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "type": "git",
     "url": "git://github.com/bradleyscott/cricd-entities.git"
   },
-  "author": "bradley",
+  "author": "Bradley Scott",
   "license": ""
 }
