--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sails": "~0.12.0-rc3",
     "sails-disk": "~0.10.7",
     "sails-hook-autoreload": "^0.13.1",
-    "sails-mysql": "^0.12.1"
+    "sails-mysql": "^0.12.1",
+    "sails-postgresql": "^0.11.4"
   },
   "scripts": {
     "debug": "node debug app.js",
