Changed git url

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bradleyscott/cricd-entities.git"
+    "url": "git://github.com/cricd/entities.git"
   },
   "author": "Bradley Scott",
   "license": ""
