--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sails-postgresql": "^0.11.4"
   },
   "scripts": {
-    "debug": "node debug app.js",
+    "debug": "node --inspect app.js",
+    "debug-windows": "SET DB_HOST=localhost&& SET DB_PASSWORD=password&& node --inspect app.js",
     "start": "node app.js"
   },
   "main": "app.js",
